argocd/dev/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-prisma
  namespace: dev
  labels:
    app: prisma
    tier: backend
    tags.datadoghq.com/env: dev
    tags.datadoghq.com/service: backend-prisma
    tags.datadoghq.com/version: latest
  annotations:
    ad.datadoghq.com/backend-prisma.logs: '[{"source": "backend-prisma","service": "backend-prisma","tags": ["env:dev"]}]'
spec:
  replicas: 1
  type: RollingUpdate
  rollingUpdate:
    timeoutSeconds: 10
  selector:
    matchLabels:
      app: prisma
      tier: backend
  template:
    metadata:
      name: backend-prisma
      labels:
        app: prisma
        tier: backend
        tags.datadoghq.com/env: dev
        tags.datadoghq.com/service: backend-prisma
        tags.datadoghq.com/version: latest
        admission.datadoghq.com/enabled: "true"
      annotations:
        linkerd.io/inject: enabled
        admission.datadoghq.com/java-lib.version: v1.2.0
    spec:
      containers:
        - name: backend-prisma
          image: jensdl/backend:dev.v22.12.23-10h14m
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: smb-devbe-logs
              mountPath: "/logs"
              readOnly: false
            - name: smb-devbe-files
              mountPath: "/.data"
              readOnly: false
      volumes:
        - name: smb-devbe-logs
          persistentVolumeClaim:
            claimName: pvc-smb-devbe-logs
        - name: smb-devbe-files
          persistentVolumeClaim:
            claimName: pvc-smb-devbe-files
