argocd/dev/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-prisma-service
  namespace: dev
  labels:
    app: prisma
    tier: backend
spec:
  
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: prisma
    tier: backend
