argocd/dev/database-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: dev
spec:
  ports:
    - port: 3306
  selector:
    app: prisma
    tier: database
  template:
    spec:
      containers:
        - image: jensdl/mysql:dev.v22.11.21-19h33m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: dev
spec:
  selector:
    matchLabels:
      app: prisma
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prisma
        tier: database
    spec:
      containers:
        - image: jensdl/mysql:dev.v22.11.21-19h33m
          imagePullPolicy: IfNotPresent
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pv-claim
