argocd/dev/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: dev
  annotations:
    linkerd.io/inject: enabled
spec:
  ports:
    - port: 3306
  selector:
    app: prisma
    tier: database
